--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </style>
 </head>
 <body>
-  <h1>EBOX Referral</h1>
+<h1>EBOX $25 Referral Code – AN259</h1>
 
   <h2>Référence EBOX 25$ Referral</h2>
 
