--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="NaTYCG0NPe5c6REvWvwaj7WVdMV00oQ0wLUYeLOl7_U" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="EBOX referral code for $25 credit – AN259. Use this code to get a discount as a new customer!" />
