--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Google verification tag -->
   <meta name="google-site-verification" content="NaTYCG0NPe5c6REvWvwaj7WVdMV00oQ0wLUYeLOl7_U" />
+  
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="EBOX referral code for $25 credit – AN259. Use this code to get a discount as a new customer!" />
-  <title>EBOX $25 Referral Code – AN259</title>
+
+  <!-- 🆕 Improved meta description with more keywords -->
+  <meta name="description" content="Use EBOX referral code AN259 to get $25 off your second bill. Fast and easy signup bonus for new EBOX customers!" />
+
+  <!-- 🆕 Stronger title for Google -->
+  <title>EBOX Referral Code AN259 – Get $25 Credit for New Customers</title>
+
   <style>
     body {
       margin: 0;
       padding: 2rem;
-      background-color: #d32f2f; /* Red background */
+      background-color: #d32f2f;
       color: #fff;
       font-family: Arial, sans-serif;
       line-height: 1.6;
@@ -19,8 +26,8 @@
       text-align: center;
     }
     code {
-      background-color: #fff; /* White background */
-      color: #000; /* Black text */
+      background-color: #fff;
+      color: #000;
       padding: 0.4rem 0.8rem;
       border-radius: 6px;
       font-size: 1.5rem;
@@ -28,28 +35,33 @@
       margin: 0.8rem 0;
       font-weight: bold;
     }
+    a {
+      color: white;
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
-<h1>EBOX $25 Referral Code – AN259</h1>
+  <!-- 🆕 Main heading matches search query -->
+  <h1>EBOX Referral Code AN259 – $25 Discount</h1>
 
-  <h2>Référence EBOX 25$ Referral</h2>
+  <h2>Référence EBOX 25$ Referral Code</h2>
 
+  <p>Looking for an <strong>EBOX referral code</strong> that works? Use <code>AN259</code> to get a $25 credit!</p>
 
-  <p>En tant que nouveau client vous avez droit à un avantage!</p>
+  <p>En tant que nouveau client, vous avez droit à un avantage!</p>
   <p>Un crédit de 25$ sera appliqué à votre deuxième facture!</p>
-  <p>Lors de votre abonnement, vous n’aurez qu’à fournir le code <code>AN259</code>. Aussi simple que ça!</p>
+  <p>Lors de votre abonnement, fournissez simplement le code <code>AN259</code>. Aussi simple que ça!</p>
   <p>Ça se prend bien quand même! 😄</p>
   <p><strong>Abonnez-vous dès aujourd’hui</strong></p>
 
   <hr style="margin: 2rem 0; border-color: white;">
 
-  <p><strong>As a new EBOX client you deserve a perk!</strong></p>
-  <p>As a welcome you will receive a $25 credit on your second invoice!</p>
-  <p>All you have to do is provide the referral code <code>AN259</code> when you subscribe.</p>
-  <p>No fine print or strings attached!</p>
-  <p><strong>Enjoy! 🎉</strong></p>
+  <p><strong>As a new EBOX internet customer, you deserve a perk!</strong></p>
+  <p>When you sign up with EBOX and use referral code <code>AN259</code>, you’ll receive a $25 credit on your second invoice.</p>
+  <p>No fine print, no commitment. Just savings!</p>
+  <p><strong>Enjoy your discount and fast internet! 🎉</strong></p>
 
-  <p><strong>Contact EBOX to Register today!</strong></p>
+  <p>Ready to sign up? Visit <a href="https://www.ebox.ca" target="_blank">ebox.ca</a> and enter the referral code during registration.</p>
 </body>
 </html>
