--- a/index.html
+++ b/index.html
@@ -62,5 +62,8 @@
   <p><strong>Enjoy your discount and fast internet! 🎉</strong></p>
 
   <p>Ready to sign up? Visit <a href="https://www.ebox.ca" target="_blank">ebox.ca</a> and enter the referral code during registration.</p>
+
+<p>Looking for a Public Mobile bonus too? Check out my <a href="https://niz-az.github.io/public-mobile-referral/">Public Mobile referral page</a>.</p>
+
 </body>
 </html>
