--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- 🆕 Improved meta description with more keywords -->
-  <meta name="description" content="Use EBOX referral code AN259 to get $25 off your second bill. Fast and easy signup bonus for new EBOX customers!" />
+  <!-- Optimized bilingual meta description -->
+  <meta name="description" content="EBOX referral code AN259 – Get $25 credit on your second bill. Utilisez le code de référence AN259 pour obtenir un crédit de 25$ chez EBOX. Pour nouveaux clients.">
 
-  <!-- 🆕 Stronger title for Google -->
-  <title>EBOX Referral Code AN259 – Get $25 Credit for New Customers</title>
+  <title>EBOX Referral Code AN259 – Code de Référence – 25$ Crédit</title>
 
   <style>
     body {
@@ -42,28 +41,30 @@
   </style>
 </head>
 <body>
-  <!-- 🆕 Main heading matches search query -->
-  <h1>EBOX Referral Code AN259 – $25 Discount</h1>
 
-  <h2>Référence EBOX 25$ Referral Code</h2>
+  <!-- Main bilingual heading -->
+  <h1>EBOX Referral Code / Code de Référence – AN259 – 25$ Credit</h1>
+  <h2>Offre pour Nouveaux Clients / New Customer Offer</h2>
 
+  <!-- French block -->
+  <p>En tant que nouveau client EBOX, vous avez droit à une promotion exclusive!</p>
+  <p>Recevez un crédit de <strong>25$</strong> appliqué à votre deuxième facture en utilisant le code de référence suivant :</p>
+  <code>AN259</code>
+  <p>Entrez ce code lors de votre inscription sur le site <a href="https://www.ebox.ca/fr/" target="_blank">ebox.ca</a>.</p>
+  <p><strong>Aucune condition cachée. Une économie facile!</strong></p>
 
-  <p>En tant que nouveau client, vous avez droit à un avantage!</p>
-  <p>Un crédit de 25$ sera appliqué à votre deuxième facture!</p>
-  <p>Lors de votre abonnement, fournissez simplement le code <code>AN259</code>. Aussi simple que ça!</p>
-  <p>Ça se prend bien quand même! 😄</p>
-  <p><strong>Abonnez-vous dès aujourd’hui</strong></p>
+  <p>Vous cherchez aussi une réduction sur le cellulaire? Visitez ma page pour <a href="https://niz-az.github.io/public-mobile-referral/">le code de référence Public Mobile</a> et obtenez 10$ de crédit.</p>
 
   <hr style="margin: 2rem 0; border-color: white;">
 
-  <p><strong>As a new EBOX internet customer, you deserve a perk!</strong></p>
-  <p>When you sign up with EBOX and use referral code <code>AN259</code>, you’ll receive a $25 credit on your second invoice.</p>
-  <p>No fine print, no commitment. Just savings!</p>
-  <p><strong>Enjoy your discount and fast internet! 🎉</strong></p>
+  <!-- English block -->
+  <p><strong>New to EBOX Internet? Here's a bonus just for signing up.</strong></p>
+  <p>Use referral code <code>AN259</code> during registration and get a <strong>$25 credit</strong> applied to your second invoice.</p>
+  <p>No strings attached, no hidden fees — just a simple discount for new customers.</p>
+  <p>Sign up at <a href="https://www.ebox.ca" target="_blank">ebox.ca</a> and enter the code when prompted.</p>
 
-  <p>Ready to sign up? Visit <a href="https://www.ebox.ca" target="_blank">ebox.ca</a> and enter the referral code during registration.</p>
-
-<p>Looking for a Public Mobile bonus too? Check out my <a href="https://niz-az.github.io/public-mobile-referral/">Public Mobile referral page</a>.</p>
+  <p>Also looking for a mobile bonus? Check out my <a href="https://niz-az.github.io/public-mobile-referral/">Public Mobile referral code page</a> for a $10 credit.</p>
 
 </body>
 </html>
+
