--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Google verification tag -->
+  <!-- Google Search Console verification -->
   <meta name="google-site-verification" content="NaTYCG0NPe5c6REvWvwaj7WVdMV00oQ0wLUYeLOl7_U" />
-  
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Optimized bilingual meta description -->
-  <meta name="description" content="EBOX referral code AN259 – Get $25 credit on your second bill. Utilisez le code de référence AN259 pour obtenir un crédit de 25$ chez EBOX. Pour nouveaux clients.">
+  <!-- Bilingual meta description -->
+  <meta name="description" content="Public Mobile referral code 390WXW – Get $10 credit as a new customer. Utilisez le code de référence 390WXW pour obtenir 10 $ de rabais chez Public Mobile.">
 
-  <title>EBOX Referral Code AN259 – Code de Référence – 25$ Crédit</title>
+  <title>Public Mobile Referral Code 390WXW – Code de Référence – 10 $ Crédit</title>
 
   <style>
     body {
       margin: 0;
       padding: 2rem;
-      background-color: #d32f2f;
+      background-color: #f57c00;
       color: #fff;
       font-family: Arial, sans-serif;
       line-height: 1.6;
@@ -38,33 +38,77 @@
       color: white;
       text-decoration: underline;
     }
+    hr {
+      margin: 2.5rem 0;
+      border: 1px solid white;
+    }
   </style>
 </head>
 <body>
 
-  <!-- Main bilingual heading -->
-  <h1>EBOX Referral Code / Code de Référence – AN259 – 25$ Credit</h1>
-  <h2>Offre pour Nouveaux Clients / New Customer Offer</h2>
+  <h1>Public Mobile Referral Code – 390WXW</h1>
+  <h2>Get $10 Credit on Your Second Bill</h2>
+  <p>Use this referral code when activating your Public Mobile account:</p>
+  <code>390WXW</code>
 
-  <!-- French block -->
-  <p>En tant que nouveau client EBOX, vous avez droit à une promotion exclusive!</p>
-  <p>Recevez un crédit de <strong>25$</strong> appliqué à votre deuxième facture en utilisant le code de référence suivant :</p>
-  <code>AN259</code>
-  <p>Entrez ce code lors de votre inscription sur le site <a href="https://www.ebox.ca/fr/" target="_blank">ebox.ca</a>.</p>
-  <p><strong>Aucune condition cachée. Une économie facile!</strong></p>
+  <p>Just sign up at <a href="https://www.publicmobile.ca/en/on/plans" target="_blank">Public Mobile</a>, and enter the code during activation. You’ll receive a $10 credit on your second bill!</p>
 
-  <p>Vous cherchez aussi une réduction sur le cellulaire? Visitez ma page pour <a href="https://niz-az.github.io/public-mobile-referral/">le code de référence Public Mobile</a> et obtenez 10$ de crédit.</p>
+  <p><strong>No contracts, no hidden fees – just a simple sign-up bonus.</strong></p>
 
-  <hr style="margin: 2rem 0; border-color: white;">
+  <hr>
 
-  <!-- English block -->
-  <p><strong>New to EBOX Internet? Here's a bonus just for signing up.</strong></p>
-  <p>Use referral code <code>AN259</code> during registration and get a <strong>$25 credit</strong> applied to your second invoice.</p>
-  <p>No strings attached, no hidden fees — just a simple discount for new customers.</p>
-  <p>Sign up at <a href="https://www.ebox.ca" target="_blank">ebox.ca</a> and enter the code when prompted.</p>
+  <h2>How to Use the Public Mobile Referral Code</h2>
+  <ol>
+    <li>Visit <a href="https://www.publicmobile.ca/en/on/plans" target="_blank">publicmobile.ca</a></li>
+    <li>Select your plan and SIM card</li>
+    <li>During activation, enter the referral code <code>390WXW</code></li>
+    <li>You’ll get a $10 credit on your second invoice</li>
+  </ol>
 
-  <p>Also looking for a mobile bonus? Check out my <a href="https://niz-az.github.io/public-mobile-referral/">Public Mobile referral code page</a> for a $10 credit.</p>
+  <hr>
+
+  <h2>FAQ</h2>
+  <p><strong>Q: Where do I enter the code?</strong><br>
+  A: You’ll be asked for a referral code during the activation process, after selecting your plan.</p>
+
+  <p><strong>Q: When do I get the $10 credit?</strong><br>
+  A: It will be applied automatically to your second bill.</p>
+
+  <p><strong>Q: Can I use the code with any plan?</strong><br>
+  A: Yes! The referral code works with all available Public Mobile plans.</p>
+
+  <hr>
+
+  <h1>Code de Référence Public Mobile – 390WXW</h1>
+  <h2>Obtenez 10 $ de crédit comme nouveau client</h2>
+  <p>Utilisez ce code lors de l’activation de votre compte Public Mobile :</p>
+  <code>390WXW</code>
+
+  <p>Inscrivez-vous sur le site <a href="https://www.publicmobile.ca/fr/on/plans" target="_blank">publicmobile.ca</a> et entrez le code pendant l’activation. Un crédit de 10 $ sera appliqué à votre deuxième facture.</p>
+
+  <p><strong>Pas de contrat, pas de conditions cachées – juste une offre simple.</strong></p>
+
+  <hr>
+
+  <h2>Comment utiliser le code de référence Public Mobile</h2>
+  <ol>
+    <li>Visitez <a href="https://www.publicmobile.ca/fr/on/plans" target="_blank">publicmobile.ca</a></li>
+    <li>Choisissez votre forfait et carte SIM</li>
+    <li>Lors de l’activation, entrez le code <code>390WXW</code></li>
+    <li>Un crédit de 10 $ sera appliqué à votre deuxième facture</li>
+  </ol>
+
+  <hr>
+
+  <h2>FAQ (Foire aux questions)</h2>
+  <p><strong>Q : Où entrer le code de référence ?</strong><br>
+  R : Pendant l’activation de votre carte SIM, après avoir sélectionné un forfait.</p>
+
+  <p><strong>Q : Quand vais-je recevoir le crédit de 10 $ ?</strong><br>
+  R : Il sera appliqué automatiquement à votre deuxième facture.</p>
+
+  <p><strong>Q : Est-ce que cela fonctionne avec tous les forfaits ?</strong><br>
+  R : Oui, le code fonctionne avec tous les forfaits de Public Mobile.</p>
 
 </body>
 </html>
-
