--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Bilingual meta description -->
-  <meta name="description" content="Public Mobile referral code 390WXW – Get $10 credit as a new customer. Utilisez le code de référence 390WXW pour obtenir 10 $ de rabais chez Public Mobile.">
+  <meta name="description" content="Public Mobile referral code 39owxw – Get $10 credit as a new customer. Utilisez le code de référence 39owxw pour obtenir 10 $ de rabais chez Public Mobile.">
 
-  <title>Public Mobile Referral Code 390WXW – Code de Référence – 10 $ Crédit</title>
+  <title>Public Mobile Referral Code 39owxw – Code de Référence – 10 $ Crédit</title>
 
   <style>
     body {
@@ -46,10 +46,10 @@
 </head>
 <body>
 
-  <h1>Public Mobile Referral Code – 390WXW</h1>
+  <h1>Public Mobile Referral Code – 39owxw</h1>
   <h2>Get $10 Credit on Your Second Bill</h2>
   <p>Use this referral code when activating your Public Mobile account:</p>
-  <code>390WXW</code>
+  <code>39owxw</code>
 
   <p>Just sign up at <a href="https://www.publicmobile.ca/en/on/plans" target="_blank">Public Mobile</a>, and enter the code during activation. You’ll receive a $10 credit on your second bill!</p>
 
@@ -61,7 +61,7 @@
   <ol>
     <li>Visit <a href="https://www.publicmobile.ca/en/on/plans" target="_blank">publicmobile.ca</a></li>
     <li>Select your plan and SIM card</li>
-    <li>During activation, enter the referral code <code>390WXW</code></li>
+    <li>During activation, enter the referral code <code>39owxw</code></li>
     <li>You’ll get a $10 credit on your second invoice</li>
   </ol>
 
@@ -79,10 +79,10 @@
 
   <hr>
 
-  <h1>Code de Référence Public Mobile – 390WXW</h1>
+  <h1>Code de Référence Public Mobile – 39owxw</h1>
   <h2>Obtenez 10 $ de crédit comme nouveau client</h2>
   <p>Utilisez ce code lors de l’activation de votre compte Public Mobile :</p>
-  <code>390WXW</code>
+  <code>39owxw</code>
 
   <p>Inscrivez-vous sur le site <a href="https://www.publicmobile.ca/fr/on/plans" target="_blank">publicmobile.ca</a> et entrez le code pendant l’activation. Un crédit de 10 $ sera appliqué à votre deuxième facture.</p>
 
@@ -94,7 +94,7 @@
   <ol>
     <li>Visitez <a href="https://www.publicmobile.ca/fr/on/plans" target="_blank">publicmobile.ca</a></li>
     <li>Choisissez votre forfait et carte SIM</li>
-    <li>Lors de l’activation, entrez le code <code>390WXW</code></li>
+    <li>Lors de l’activation, entrez le code <code>39owxw</code></li>
     <li>Un crédit de 10 $ sera appliqué à votre deuxième facture</li>
   </ol>
 
