--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Bilingual meta description -->
-  <meta name="description" content="Public Mobile referral code 39owxw – Get $10 credit as a new customer. Utilisez le code de référence 39owxw pour obtenir 10 $ de rabais chez Public Mobile.">
+    <title>Public Mobile Referral Code 39owxw – Get $10 Credit</title>
+  <meta name="description" content="Use Public Mobile referral code 39owxw to get a $10 credit. Sign up today and save on your second bill. No contract, no hidden fees." />
 
-  <title>Public Mobile Referral Code 39owxw – Code de Référence – 10 $ Crédit</title>
+  <link rel="alternate" hreflang="en" href="https://niz-az.github.io/" />
+  <link rel="alternate" hreflang="fr" href="https://niz-az.github.io/code-promo-public-mobile.html" />
 
   <style>
     body {
@@ -46,12 +47,14 @@
 </head>
 <body>
 
+  <p><a href="code-promo-public-mobile.html">Voir cette page en français</a></p>
+
   <h1>Public Mobile Referral Code – 39owxw</h1>
   <h2>Get $10 Credit on Your Second Bill</h2>
   <p>Use this referral code when activating your Public Mobile account:</p>
   <code>39owxw</code>
 
-  <p>Just sign up at <a href="https://www.publicmobile.ca/en/on/plans" target="_blank">Public Mobile</a>, and enter the code during activation. You’ll receive a $10 credit on your second bill!</p>
+  <p>Sign up at <a href="https://www.publicmobile.ca/en/on/plans" target="_blank">Public Mobile</a> and enter the code during activation. You’ll receive a $10 credit on your second bill!</p>
 
   <p><strong>No contracts, no hidden fees – just a simple sign-up bonus.</strong></p>
 
@@ -69,46 +72,13 @@
 
   <h2>FAQ</h2>
   <p><strong>Q: Where do I enter the code?</strong><br>
-  A: You’ll be asked for a referral code during the activation process, after selecting your plan.</p>
+  A: During the activation process after selecting your plan.</p>
 
   <p><strong>Q: When do I get the $10 credit?</strong><br>
-  A: It will be applied automatically to your second bill.</p>
+  A: It will be automatically applied to your second bill.</p>
 
   <p><strong>Q: Can I use the code with any plan?</strong><br>
-  A: Yes! The referral code works with all available Public Mobile plans.</p>
-
-  <hr>
-
-  <h1>Code de Référence Public Mobile – 39owxw</h1>
-  <h2>Obtenez 10 $ de crédit comme nouveau client</h2>
-  <p>Utilisez ce code lors de l’activation de votre compte Public Mobile :</p>
-  <code>39owxw</code>
-
-  <p>Inscrivez-vous sur le site <a href="https://www.publicmobile.ca/fr/on/plans" target="_blank">publicmobile.ca</a> et entrez le code pendant l’activation. Un crédit de 10 $ sera appliqué à votre deuxième facture.</p>
-
-  <p><strong>Pas de contrat, pas de conditions cachées – juste une offre simple.</strong></p>
-
-  <hr>
-
-  <h2>Comment utiliser le code de référence Public Mobile</h2>
-  <ol>
-    <li>Visitez <a href="https://www.publicmobile.ca/fr/on/plans" target="_blank">publicmobile.ca</a></li>
-    <li>Choisissez votre forfait et carte SIM</li>
-    <li>Lors de l’activation, entrez le code <code>39owxw</code></li>
-    <li>Un crédit de 10 $ sera appliqué à votre deuxième facture</li>
-  </ol>
-
-  <hr>
-
-  <h2>FAQ (Foire aux questions)</h2>
-  <p><strong>Q : Où entrer le code de référence ?</strong><br>
-  R : Pendant l’activation de votre carte SIM, après avoir sélectionné un forfait.</p>
-
-  <p><strong>Q : Quand vais-je recevoir le crédit de 10 $ ?</strong><br>
-  R : Il sera appliqué automatiquement à votre deuxième facture.</p>
-
-  <p><strong>Q : Est-ce que cela fonctionne avec tous les forfaits ?</strong><br>
-  R : Oui, le code fonctionne avec tous les forfaits de Public Mobile.</p>
+  A: Yes! The referral code works with all Public Mobile plans.</p>
 
 </body>
 </html>
