--- a/code-promo-public-mobile.html
+++ b/code-promo-public-mobile.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+
+  <meta name="google-site-verification" content="NaTYCG0NPe5c6REvWvwaj7WVdMV00oQ0wLUYeLOl7_U" />
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
