--- a/code-promo-public-mobile.html
+++ b/code-promo-public-mobile.html
@@ -7,6 +7,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <link rel="canonical" href="https://niz-az.github.io/code-promo-public-mobile.html" />
+
+
   <title>Code Promo Public Mobile – Code de Référence 39owxw – 25 $ de Crédit</title>
   <meta name="description" content="Utilisez le code promo Public Mobile 39owxw pour obtenir 25 $ de crédit sur votre deuxième facture. Offre pour nouveaux clients sans engagement." />
 
