--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     body {
       margin: 0;
       padding: 2rem;
-      background-color: #f57c00;
+      background-color: #393F57;
       color: #fff;
       font-family: Arial, sans-serif;
       line-height: 1.6;
