--- a/index.html
+++ b/index.html
@@ -1,84 +1,231 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <!-- Google Search Console verification -->
-  <meta name="google-site-verification" content="NaTYCG0NPe5c6REvWvwaj7WVdMV00oQ0wLUYeLOl7_U" />
+  <head>
+    <!-- Google Search Console verification -->
+    <meta
+      name="google-site-verification"
+      content="NaTYCG0NPe5c6REvWvwaj7WVdMV00oQ0wLUYeLOl7_U"
+    />
 
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Public Mobile Referral Code 39owxw – Get $25 Credit</title>
-  <meta name="description" content="Use Public Mobile referral code 39owxw to get a $25 credit. Sign up today and save on your second bill. No contract, no hidden fees." />
+    <title>Public Mobile Promo Code 39owxw – Get $10 Credit</title>
+    <meta
+      name="description"
+      content="Use Public Mobile promo code 39owxw to get a $10 credit. This referral, discount, and voucher code saves you money on your second bill. No contract, no hidden fees."
+    />
 
-  <link rel="alternate" hreflang="en" href="https://niz-az.github.io/" />
-  <link rel="alternate" hreflang="fr" href="https://niz-az.github.io/code-promo-public-mobile.html" />
+    <meta
+      property="og:title"
+      content="Public Mobile Promo Code 39owxw – $10 Discount for New Customers"
+    />
+    <meta
+      property="og:description"
+      content="Sign up for Public Mobile and use referral/promo code 39owxw to receive a $10 discount on your second bill. No contract, no hidden fees."
+    />
+    <meta
+      property="og:image"
+      content="https://niz-az.github.io/public-mobile-preview.png"
+    />
+    <meta
+      property="og:url"
+      content="https://niz-az.github.io/"
+    />
+    <meta property="og:type" content="website" />
 
-  <style>
-    body {
-      margin: 0;
-      padding: 2rem;
-      background-color: #393F57;
-      color: #fff;
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-    }
-    h1, h2 {
-      text-align: center;
-    }
-    code {
-      background-color: #fff;
-      color: #000;
-      padding: 0.4rem 0.8rem;
-      border-radius: 6px;
-      font-size: 1.5rem;
-      display: inline-block;
-      margin: 0.8rem 0;
-      font-weight: bold;
-    }
-    a {
-      color: white;
-      text-decoration: underline;
-    }
-    hr {
-      margin: 2.5rem 0;
-      border: 1px solid white;
-    }
-  </style>
-</head>
-<body>
+    <!-- FAQ Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "Where do I enter the Public Mobile referral or promo code?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Enter the referral or promo code 39owxw during activation after selecting your plan on publicmobile.ca."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "When do I get the $10 Public Mobile discount?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "The $10 discount is applied to your second monthly bill automatically."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Can I use the promo code with any Public Mobile plan?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Yes, you can use promo code 39owxw with any available Public Mobile plan."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Is there a contract with Public Mobile?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "No, Public Mobile is fully prepaid with no contracts or hidden charges."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Is the referral or voucher code 39owxw still valid?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Yes, this promo/referral code is still active for new Public Mobile customers in 2025."
+            }
+          }
+        ]
+      }
+    </script>
 
-  <p><a href="code-promo-public-mobile.html">Voir cette page en français</a></p>
+    <link rel="alternate" hreflang="en" href="https://niz-az.github.io/" />
+    <link rel="alternate" hreflang="fr" href="https://niz-az.github.io/code-promo-public-mobile.html" />
+    <link rel="icon" href="favicon.png" type="image/png" />
 
-  <h1>Public Mobile Referral Code – 39owxw</h1>
-  <h2>Get $25 Credit on Your Second Bill</h2>
-  <p>Use this referral code when activating your Public Mobile account:</p>
-  <code>39owxw</code>
+    <style>
+      body {
+        margin: 0;
+        padding: 2rem;
+        background-color: #212529;
+        color: #fff;
+        font-family: Arial, sans-serif;
+        line-height: 1.6;
+      }
 
-  <p>Sign up at <a href="https://www.publicmobile.ca/en/on/plans" target="_blank">Public Mobile</a> and enter the code during activation. You’ll receive a $25 credit on your second bill!</p>
+      h1, h2 {
+        text-align: center;
+      }
 
-  <p><strong>No contracts, no hidden fees – just a simple sign-up bonus.</strong></p>
+      code {
+        background-color: #d9480f;
+        color: #fff;
+        padding: 0.4rem 0.8rem;
+        border-radius: 12px;
+        font-size: 1.5rem;
+        display: inline-block;
+        margin: 0.8rem 0;
+        font-weight: bold;
+      }
 
-  <hr>
+      a {
+        color: white;
+        text-decoration: underline;
+      }
 
-  <h2>How to Use the Public Mobile Referral Code</h2>
-  <ol>
-    <li>Visit <a href="https://www.publicmobile.ca/en/on/plans" target="_blank">publicmobile.ca</a></li>
-    <li>Select your plan and SIM card</li>
-    <li>During activation, enter the referral code <code>39owxw</code></li>
-    <li>You’ll get a $25 credit on your second invoice</li>
-  </ol>
+      img {
+        max-width: 100%;
+        height: auto;
+        display: block;
+        margin: 2rem auto;
+        border-radius: 12px;
+      }
 
-  <hr>
+      details {
+        background-color: #2c3035;
+        border-radius: 8px;
+        margin-bottom: 1rem;
+        padding: 1rem;
+        border: 1px solid #444;
+      }
 
-  <h2>FAQ</h2>
-  <p><strong>Q: Where do I enter the code?</strong><br>
-  A: During the activation process after selecting your plan.</p>
+      summary {
+        font-weight: bold;
+        cursor: pointer;
+        outline: none;
+      }
 
-  <p><strong>Q: When do I get the $25 credit?</strong><br>
-  A: It will be automatically applied to your second bill.</p>
+      details[open] summary {
+        margin-bottom: 0.5rem;
+      }
 
-  <p><strong>Q: Can I use the code with any plan?</strong><br>
-  A: Yes! The referral code works with all Public Mobile plans.</p>
+      .hero {
+        background-color: #d9480f;
+        padding: 2rem 1rem;
+        text-align: center;
+        border-radius: 16px;
+        margin-bottom: 2rem;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+      }
 
-</body>
+      .hero h1 {
+        margin: 0;
+        color: white;
+        font-size: 2rem;
+        font-weight: bold;
+        line-height: 1.3;
+      }
+    </style>
+  </head>
+  <body>
+    <p>
+      <a href="code-promo-public-mobile.html" lang="fr">Voir cette page en français</a>
+    </p>
+
+    <section class="hero">
+      <h1>Public Mobile Promo Code – 39owxw – Get a $10 off</h1>
+    </section>
+
+    <h2>Save Instantly With This Exclusive Discount Code</h2>
+
+    <p>
+      Activate your account using Public Mobile's official <strong>promo code</strong>
+      <code>39owxw</code> and receive a <strong>$10 discount</strong> applied to your second bill.
+    </p>
+
+    <p>
+      This referral code works just like a <strong>coupon code</strong> or
+      <strong>voucher</strong> — no contracts, no hidden fees, just instant savings!
+    </p>
+
+    <p>
+      Go to
+      <a href="https://www.publicmobile.ca/en/on/plans" target="_blank">publicmobile.ca</a>,
+      choose your plan and SIM or eSIM, and enter the code during activation.
+    </p>
+
+    <section style="margin-top: 4rem; border-top: 2px solid white; padding-top: 1rem">
+      <h2>How to Use the Public Mobile Discount Code</h2>
+      <ol>
+        <li>Visit <a href="https://www.publicmobile.ca/en/on/plans" target="_blank">publicmobile.ca</a></li>
+        <li>Select your plan and purchase a SIM or eSIM</li>
+        <li>Enter the referral or discount code <code>39owxw</code> during activation</li>
+        <li>Receive a $10 credit on your second bill</li>
+      </ol>
+    </section>
+
+    <section style="margin-top: 4rem; border-top: 2px solid white; padding-top: 1rem">
+      <h2>Frequently Asked Questions (FAQ)</h2>
+
+      <details>
+        <summary><strong>Where do I enter the referral or promo code?</strong></summary>
+        <p>Enter <code>39owxw</code> during the account activation process after selecting your plan.</p>
+      </details>
+
+      <details>
+        <summary><strong>When will I receive the $10 discount?</strong></summary>
+        <p>The discount is automatically applied to your second monthly payment as a bill credit.</p>
+      </details>
+
+      <details>
+        <summary><strong>Does the code work with all plans?</strong></summary>
+        <p>Yes, this referral code is valid with all Public Mobile plans.</p>
+      </details>
+
+      <details>
+        <summary><strong>Is there a contract involved?</strong></summary>
+        <p>No contracts, ever. Public Mobile is 100% prepaid with no surprises.</p>
+      </details>
+
+      <details>
+        <summary><strong>Is the referral code 39owxw still valid?</strong></summary>
+        <p>Yes, this Public Mobile promo code is active in 2025 for all new signups.</p>
+      </details>
+    </section>
+  </body>
 </html>
