--- a/code-promo-public-mobile.html
+++ b/code-promo-public-mobile.html
@@ -1,87 +1,220 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
+  <head>
+    <!-- Google Search Console verification -->
+    <meta name="google-site-verification" content="NaTYCG0NPe5c6REvWvwaj7WVdMV00oQ0wLUYeLOl7_U" />
 
-  <meta name="google-site-verification" content="NaTYCG0NPe5c6REvWvwaj7WVdMV00oQ0wLUYeLOl7_U" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Code Promo Public Mobile – 39owxw – Obtenez 25 $ de Crédit</title>
+    <meta name="description" content="Utilisez le code promo Public Mobile 39owxw pour obtenir 25 $ de crédit sur votre deuxième facture. Offre pour nouveaux clients sans engagement." />
 
-  <link rel="canonical" href="https://niz-az.github.io/code-promo-public-mobile.html" />
+    <!-- Open Graph Metadata -->
+    <meta property="og:title" content="Code Promo Public Mobile 39owxw – 25 $ de Réduction pour Nouveaux Clients" />
+    <meta property="og:description" content="Inscrivez-vous à Public Mobile et utilisez le code promo 39owxw pour recevoir 25 $ de crédit. Aucune condition, aucun contrat." />
+    <meta property="og:image" content="https://niz-az.github.io/public-mobile-preview.png" />
+    <meta property="og:url" content="https://niz-az.github.io/code-promo-public-mobile.html" />
+    <meta property="og:type" content="website" />
 
+    <!-- FAQ Structured Data in French -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "Où entrer le code de référence Public Mobile ?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Entrez le code de référence 39owxw lors de l’activation de votre compte, après avoir choisi votre forfait sur publicmobile.ca."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Quand vais-je recevoir le crédit de 25 $ ?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Le crédit est automatiquement appliqué à votre deuxième facture mensuelle."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Ce code fonctionne-t-il avec tous les forfaits ?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Oui, le code promo fonctionne avec tous les forfaits offerts par Public Mobile."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Y a-t-il un contrat ?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Non, Public Mobile est entièrement prépayé, sans contrat ni frais cachés."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Le code de référence 39owxw est-il toujours valide ?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Oui, ce code promo est toujours actif pour les nouveaux clients en 2025."
+            }
+          }
+        ]
+      }
+    </script>
 
-  <title>Code Promo Public Mobile – Code de Référence 39owxw – 25 $ de Crédit</title>
-  <meta name="description" content="Utilisez le code promo Public Mobile 39owxw pour obtenir 25 $ de crédit sur votre deuxième facture. Offre pour nouveaux clients sans engagement." />
+    <!-- Alternate Language Links -->
+    <link rel="alternate" hreflang="fr" href="https://niz-az.github.io/code-promo-public-mobile.html" />
+    <link rel="alternate" hreflang="en" href="https://niz-az.github.io/" />
 
-  <link rel="alternate" hreflang="fr" href="https://niz-az.github.io/code-promo-public-mobile.html" />
-  <link rel="alternate" hreflang="en" href="https://niz-az.github.io/" />
+    <!-- Favicon -->
+    <link rel="icon" href="favicon.png" type="image/png" />
 
-  <style>
-    body {
-      margin: 0;
-      padding: 2rem;
-      background-color: #393F57;
-      color: #fff;
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-    }
-    h1, h2 {
-      text-align: center;
-    }
-    code {
-      background-color: #fff;
-      color: #000;
-      padding: 0.4rem 0.8rem;
-      border-radius: 6px;
-      font-size: 1.5rem;
-      display: inline-block;
-      margin: 0.8rem 0;
-      font-weight: bold;
-    }
-    a {
-      color: white;
-      text-decoration: underline;
-    }
-    hr {
-      margin: 2.5rem 0;
-      border: 1px solid white;
-    }
-  </style>
-</head>
-<body>
+    <!-- Canonical Link -->
+    <link rel="canonical" href="https://niz-az.github.io/code-promo-public-mobile.html" />
 
-  <p><a href="/">See this page in English</a></p>
+    <!-- Styles -->
+    <style>
+      body {
+        margin: 0;
+        padding: 2rem;
+        background-color: #212529;
+        color: #fff;
+        font-family: Arial, sans-serif;
+        line-height: 1.6;
+      }
 
-  <h1>Code Promo Public Mobile – 39owxw</h1>
-  <h2>Obtenez 25 $ de crédit sur votre deuxième facture</h2>
-  <p>Utilisez ce code lors de l’activation de votre compte Public Mobile :</p>
-  <code>39owxw</code>
+      h1, h2 {
+        text-align: center;
+      }
 
-  <p>Inscrivez-vous sur le site <a href="https://www.publicmobile.ca/fr/on/plans" target="_blank">publicmobile.ca</a> et entrez le code pendant l’activation. Un crédit de 25 $ sera appliqué à votre deuxième facture.</p>
+      code {
+        background-color: #d9480f;
+        color: #fff;
+        padding: 0.4rem 0.8rem;
+        border-radius: 12px;
+        font-size: 1.5rem;
+        display: inline-block;
+        margin: 0.8rem 0;
+        font-weight: bold;
+      }
 
-  <p><strong>Pas de contrat, pas de conditions cachées – juste une offre simple.</strong></p>
+      a {
+        color: white;
+        text-decoration: underline;
+      }
 
-  <hr>
+      img {
+        max-width: 100%;
+        height: auto;
+        display: block;
+        margin: 2rem auto;
+        border-radius: 12px;
+      }
 
-  <h2>Comment utiliser le code de référence</h2>
-  <ol>
-    <li>Visitez <a href="https://www.publicmobile.ca/fr/on/plans" target="_blank">publicmobile.ca</a></li>
-    <li>Choisissez votre forfait et carte SIM</li>
-    <li>Lors de l’activation, entrez le code <code>39owxw</code></li>
-    <li>Un crédit de 25 $ sera appliqué à votre deuxième facture</li>
-  </ol>
+      details {
+        background-color: #2c3035;
+        border-radius: 8px;
+        margin-bottom: 1rem;
+        padding: 1rem;
+        border: 1px solid #444;
+      }
 
-  <hr>
+      summary {
+        font-weight: bold;
+        cursor: pointer;
+        outline: none;
+      }
 
-  <h2>FAQ – Questions Fréquentes</h2>
-  <p><strong>Q : Où entrer le code de référence ?</strong><br>
-  R : Pendant l’activation, après avoir sélectionné un forfait.</p>
+      details[open] summary {
+        margin-bottom: 0.5rem;
+      }
 
-  <p><strong>Q : Quand vais-je recevoir le crédit de 25 $ ?</strong><br>
-  R : Il sera appliqué automatiquement à votre deuxième facture.</p>
+      .hero {
+        background-color: #d9480f;
+        padding: 2rem 1rem;
+        text-align: center;
+        border-radius: 16px;
+        margin-bottom: 2rem;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+      }
 
-  <p><strong>Q : Ce code fonctionne-t-il avec tous les forfaits ?</strong><br>
-  R : Oui, il fonctionne avec tous les forfaits Public Mobile.</p>
+      .hero h1 {
+        margin: 0;
+        color: white;
+        font-size: 2rem;
+        font-weight: bold;
+        line-height: 1.3;
+      }
+    </style>
+  </head>
+  <body>
+    <p>
+      <a href="/" lang="en">See this page in English</a>
+    </p>
 
-</body>
+    <section class="hero">
+      <h1>Code Promo Public Mobile – 39owxw – Obtenez 25 $</h1>
+    </section>
+
+    <h2>Réduisez votre facture avec ce code de référence</h2>
+
+    <p>
+      Activez votre compte Public Mobile avec le <strong>code promo</strong>
+      <code>39owxw</code> et recevez un <strong>crédit de 25 $</strong> appliqué à votre deuxième facture.
+    </p>
+
+    <p>
+      Ce code de parrainage fonctionne comme un <strong>bon de réduction</strong> — aucun contrat, aucune surprise.
+    </p>
+
+    <p>
+      Visitez
+      <a href="https://www.publicmobile.ca/fr/on/plans" target="_blank">publicmobile.ca</a>,
+      choisissez votre forfait et carte SIM ou eSIM, puis entrez le code lors de l’activation.
+    </p>
+
+    <section style="margin-top: 4rem; border-top: 2px solid white; padding-top: 1rem">
+      <h2>Comment utiliser le code promo</h2>
+      <ol>
+        <li>Visitez <a href="https://www.publicmobile.ca/fr/on/plans" target="_blank">publicmobile.ca</a></li>
+        <li>Sélectionnez votre forfait et votre carte SIM ou eSIM</li>
+        <li>Entrez le code de référence <code>39owxw</code> lors de l’activation</li>
+        <li>Un crédit de 25 $ sera appliqué à votre deuxième facture</li>
+      </ol>
+    </section>
+
+    <section style="margin-top: 4rem; border-top: 2px solid white; padding-top: 1rem">
+      <h2>FAQ – Questions Fréquentes</h2>
+
+      <details>
+        <summary><strong>Où entrer le code de référence ?</strong></summary>
+        <p>Entrez <code>39owxw</code> pendant l’activation de votre compte après avoir choisi un forfait.</p>
+      </details>
+
+      <details>
+        <summary><strong>Quand vais-je recevoir le crédit de 25 $ ?</strong></summary>
+        <p>Le crédit sera appliqué automatiquement à votre deuxième facture mensuelle.</p>
+      </details>
+
+      <details>
+        <summary><strong>Ce code fonctionne-t-il avec tous les forfaits ?</strong></summary>
+        <p>Oui, ce code promo est compatible avec tous les forfaits Public Mobile.</p>
+      </details>
+
+      <details>
+        <summary><strong>Y a-t-il un contrat ?</strong></summary>
+        <p>Non. Public Mobile est 100 % prépayé, sans contrat ni frais cachés.</p>
+      </details>
+
+      <details>
+        <summary><strong>Ce code est-il encore valide ?</strong></summary>
+        <p>Oui, ce code de parrainage est valide pour les nouveaux clients en 2025.</p>
+      </details>
+    </section>
+  </body>
 </html>
