--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Public Mobile Promo Code 39owxw – Get $10 Credit</title>
+    <title>Public Mobile Promo Code 39owxw</title>
     <meta
       name="description"
       content="Use Public Mobile promo code 39owxw to get a $10 credit. This referral, discount, and voucher code saves you money on your second bill. No contract, no hidden fees."
