--- a/code-promo-public-mobile.html
+++ b/code-promo-public-mobile.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Code Promo Public Mobile – 39owxw – Obtenez 10 $ de Crédit</title>
+    <title>Code Promo Public Mobile 39owxw</title>
     <meta name="description" content="Utilisez le code promo Public Mobile 39owxw pour obtenir 10 $ de crédit sur votre deuxième facture. Offre pour nouveaux clients sans engagement." />
 
     <!-- Open Graph Metadata -->
