--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     </p>
 
     <section class="hero">
-      <h1>Public Mobile Promo Code – 39owxw – Get a $10 off</h1>
+      <h1>Public Mobile Referral code – 39owxw – Get a $10 off</h1>
     </section>
 
     <h2>Save Instantly With This Exclusive Discount Code</h2>
