--- a/code-promo-public-mobile.html
+++ b/code-promo-public-mobile.html
@@ -184,7 +184,7 @@
         <li>Visitez <a href="https://www.publicmobile.ca/fr/on/plans" target="_blank">publicmobile.ca</a></li>
         <li>Sélectionnez votre forfait et votre carte SIM ou eSIM</li>
         <li>Entrez le code de référence <code>39owxw</code> lors de l’activation</li>
-        <li>Un crédit de 10 $ sera appliqué à votre deuxième facture</li>
+        <li>Un crédit de 10 $ sera appliqué à votre deuxième facture!</li>
       </ol>
     </section>
 
